# cool-game

./: .gitignore  CMakeLists.txt  Makefile  notes.txt
data/: map1.txt
include/: bitops.hpp  block.hpp  chunk.hpp  component_array.hpp  component_manager.hpp  components.hpp  config.hpp  context.hpp  cool.hpp  entity_manager.hpp  game.hpp  game_block.hpp  game_content.hpp  game_object.hpp  map.hpp  player.hpp  screen_content.hpp  structs.hpp  system_manager.hpp  systems.hpp  vec2.hpp  vector2.hpp  voxel.hpp  voxel_system.hpp
include/ecs/: component_array.hpp  component_manager.hpp  components.hpp  entity_manager.hpp  system_manager.hpp
include/glad/: glad.h
src/: cool.cpp  draw_handler.cpp  game.cpp  game_block.cpp  glad.c  input_handler.cpp  main  main.cpp  player.cpp
tests/: component_system.hpp  main.cpp
